--- a/Yahtzee/app/src/main/res/values/strings.xml
+++ b/Yahtzee/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Yahtzee</string>
+    <string name="app_helper">Click on a dice to keep it!</string>
+    <string name="app_roll_button">Roll</string>
+
 </resources>
