--- a/Yahtzee/app/src/main/res/values/strings.xml
+++ b/Yahtzee/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">Yahtzee</string>
     <string name="app_helper">Click on a dice to keep it!</string>
     <string name="app_roll_button">Roll</string>
-
+    <string name="app_no_rolls_toast">No rolls left!</string>
 </resources>
