Finished blackjack game.

--- a/BlackJack/app/src/main/res/values/strings.xml
+++ b/BlackJack/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Black Jack</string>
     <string name="app_hit_button">Hit</string>
     <string name="app_stand_button">Stand</string>
+    <string name="app_reset_button">Reset</string>
 </resources>
