--- a/WhereamI/app/src/main/res/values/strings.xml
+++ b/WhereamI/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Where am I</string>
+    <string name="google_maps_key">AIzaSyBw-nDsboDKeI66iCucWyxpGSlSa6Q5rL4</string>
 </resources>
