--- a/WhereamI/app/src/main/res/values/strings.xml
+++ b/WhereamI/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">Where am I</string>
     <string name="google_maps_key">AIzaSyBw-nDsboDKeI66iCucWyxpGSlSa6Q5rL4</string>
+    <string name="button_camera">Camera</string>
+    <string name="text_latitude">Geografska širina:</string>
+    <string name="text_longitude">Geografska dužina:</string>
+    <string name="text_state">Država:</string>
+    <string name="text_place">Mjesto:</string>
+    <string name="text_address">Adresa:</string>
 </resources>
