--- a/WhereamI/app/src/main/res/values/strings.xml
+++ b/WhereamI/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Where am I</string>
-    <string name="google_maps_key">AIzaSyBw-nDsboDKeI66iCucWyxpGSlSa6Q5rL4</string>
+    <string name="google_maps_key">API_KEY</string>
     <string name="button_camera">Camera</string>
     <string name="text_latitude">Geografska širina:</string>
     <string name="text_longitude">Geografska dužina:</string>
